# sideboard

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
src/sideboard/: __init__.py  __main__.py  board.py  chesster.py  cli.py  engine.py  game.py  skill_bridge.py  state.py
src/sideboard/data/: SKILL.md
tests/: test_board.py  test_chesster.py  test_cli.py  test_engine.py  test_game.py  test_skill_bridge.py  test_state.py
