[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sideboard"
version = "0.1.0"
description = "Chess in your terminal. Play against Chesster while your coding agent thinks."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Zach Tires-Easy" }]
keywords = ["chess", "terminal", "tui", "claude-code", "idle-game"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "python-chess>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sideboard = "sideboard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sideboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
